--- a/responsive.css
+++ b/responsive.css
@@ -11,6 +11,10 @@
     justify-content: center;
     margin-top: 20px;
   }
+
+  .skills__container {
+    grid-template-columns: 155px 155px 155px;
+  }
 }
 
 @media (max-width: 885px) {
@@ -34,7 +38,4 @@
     font-size: 1.5rem;
     line-height: 170%;
   }
-}
-
-@media (max-width: 800px) {
 }
