--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -15,7 +16,7 @@ body {
 }
 
 .container {
-  max-width: 1280px;
+  max-width: 1080px;
   width: 100%;
 
   margin: 0 auto;
@@ -122,7 +123,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
 
-  padding: 70px 100px;
+  margin: 70px 0;
 }
 
 .header__inner__content {
@@ -157,6 +158,8 @@ body {
   display: block;
   object-fit: contain;
 }
+
+/* SKILLS */
 
 .skills {
   width: 100%;
@@ -231,3 +234,5 @@ body {
 .skill:hover:nth-child(6) {
   background-color: #a259ff;
 }
+
+/* PET-PROJECTS */
