--- a/responsive.css
+++ b/responsive.css
@@ -1,9 +1,12 @@
 @media (max-width: 1100px) {
   .header__inner {
     grid-template-columns: 1fr;
+    margin: 30px 0;
+    padding: 0 50px;
   }
 
   .header__inner__content h1 {
+    text-align: center;
     font-size: 3.3rem;
   }
 
@@ -23,7 +26,7 @@
   }
 
   .header__inner {
-    padding: 30px 50px;
+    margin: 20px;
   }
 
   .header__inner__content {
