--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
 
-  margin: 70px 0;
+  margin: 70px 10px;
 }
 
 .header__inner__content {
