--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
 
-  margin: 70px 10px;
+  margin: 70px 20px;
 }
 
 .header__inner__content {
@@ -157,6 +157,7 @@ body {
   height: auto;
   display: block;
   object-fit: contain;
+  margin-right: 20px;
 }
 
 /* SKILLS */
@@ -236,3 +237,73 @@ body {
 }
 
 /* PET-PROJECTS */
+
+.projects {
+  width: 100%;
+  padding: 20px 0;
+}
+
+.projects__inner {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+}
+
+.project {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 50px;
+
+  padding: 20px;
+
+  border-radius: 5px;
+
+  background-color: #1e1e1e;
+  color: #fff;
+}
+
+.project h1 {
+  font-size: 3rem;
+  font-family: "Baloo 2", sans-serif;
+  letter-spacing: 2px;
+}
+.project p {
+  font-size: 1.8rem;
+  letter-spacing: 1.5px;
+}
+
+.project__content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.project__img img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  object-fit: contain;
+}
+
+.btns {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.git__btn {
+  width: 100%;
+  height: 60px;
+  background-color: #fff;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+
+  color: #1e1e1e;
+  font-size: 2rem;
+
+  border-radius: 5px;
+}
