--- a/responsive.css
+++ b/responsive.css
@@ -25,9 +25,9 @@
     display: none;
   }
 
-  .header__inner {
+  /* .header__inner {
     margin: 20px;
-  }
+  } */
 
   .header__inner__content {
     gap: 10px;
